
PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4544: Upgrade Hbase to 0.98.12 (daijy)

PIG-4481: e2e tests ComputeSpec_1, ComputeSpec_2 and StreamingPerformance_3 produce different result on Windows (daijy)

PIG-4496: Fix CBZip2InputStream to close underlying stream (petersla via daijy)

PIG-4528: Fix a typo in src/docs/src/documentation/content/xdocs/basic.xml (namusyaka via daijy)

PIG-4532: Pig Documentation contains typo for AvroStorage (fredericschmaljohann via daijy)

PIG-4377: Skewed outer join produce wrong result in some cases (daijy)

PIG-4538: Pig script fail with CNF in follow up MR job (daijy)

PIG-4537: Fix unit test failure introduced by TEZ-2392: TestCollectedGroup, TestLimitVariable, TestMapSideCogroup, etc (daijy)

PIG-4530: StackOverflow in TestMultiQueryLocal running under hadoop20 (nielsbasjes via rohini)

PIG-4529: Pig on tez hit counter limit imposed by MR (daijy)

PIG-4524: Pig Minicluster unit tests broken by TEZ-2333 (daijy)

PIG-4527: NON-ASCII Characters in Javadoc break 'ant docs' (nielsbasjes via daijy)

PIG-4494: Pig's htrace version conflicts with that of hadoop 2.6.0 (daijy)

PIG-4519: Correct link to Contribute page (gliptak via daijy)

PIG-4514: pig trunk compilation is broken - VertexManagerPluginContext.reconfigureVertex change (thejas)

PIG-4503: [Pig on Tez] NPE in UnionOptimizer with multiple levels of union (rohini)

PIG-4509: [Pig on Tez] Unassigned applications not killed on shutdown (rohini)

PIG-4508: [Pig on Tez] PigProcessor check for commit only on MROutput (rohini)

PIG-4505: [Pig on Tez] Auto adjust AM memory can hit OOM with 3.5GXmx (rohini)
